--- a/notebooks/SnrStudy.ipynb
+++ b/notebooks/SnrStudy.ipynb
@@ -306,16 +306,17 @@
     "    plt.semilogy(row.freqs, mean, color=f'C{i}', label=f'all{thrust}')\n",
     "    plt.semilogy(row.freqs, mean+std, color=f'C{i}', ls=':')\n",
     "plt.xlim(100, 5000)\n",
-    "plt.ylim(1e-3, 1e4)\n",
+    "plt.ylim(1e-2, 1e2)\n",
     "plt.legend()\n",
-    "plt.title(f'comparison propeller noise')\n"
+    "plt.title(f'comparison propeller noise')\n",
+    "pass"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# sweep study"
+    "# sweep study - wav"
    ]
   },
   {
@@ -334,16 +335,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. sort bins\n",
+    "def get_index_matrix(spec):\n",
+    "    spec_avg = np.mean(spec, axis=-2)\n",
+    "    index_matrix = np.argsort(spec_avg, axis=0)[::-1]\n",
+    "    return index_matrix\n",
     "\n",
-    "n_freq = 2\n",
+    "\n",
+    "def get_shifted_index_matrix(index_matrix, new_spec):\n",
+    "    \"\"\" Find the maximum-energy shift of index_matrix for a \n",
+    "    different spectrogram. For example, get index_matrix for sweep on \n",
+    "    propeller-less dataset, and then apply it to dataset with propellers \n",
+    "    on. \n",
+    "    \"\"\"\n",
+    "    def shifted_mask(spec_shape, max_bins, shift):\n",
+    "        print(f'shift {max_bins.shape} by {shift} in {spec.shape}')\n",
+    "        n_valid = min(spec_shape[1] - shift, len(max_bins))\n",
+    "        mask = np.zeros(spec_shape)\n",
+    "        mask[max_bins[:n_valid], np.arange(n_valid)+shift] = 1\n",
+    "        return mask\n",
+    "\n",
+    "    spec = np.mean(new_spec, axis=-2)\n",
+    "\n",
+    "    max_bins = index_matrix[0, :]\n",
+    "    current_max = 0\n",
+    "    current_best = 0\n",
+    "    for shift in range(min(spec.shape[1], 200)):\n",
+    "        mask = shifted_mask(spec.shape, max_bins, shift)\n",
+    "        sum_ = np.sum(mask * spec)/np.sum(mask)\n",
+    "        if sum_ > current_max:\n",
+    "            current_max = sum_\n",
+    "            current_mask = mask\n",
+    "            current_best = shift\n",
+    "\n",
+    "    return index_matrix[:, current_best:]\n",
+    "\n",
+    "    fig, ax = plt.subplots()\n",
+    "    fig.set_size_inches(10, 5)\n",
+    "    ax.pcolorfast(current_mask*spec)\n",
+    "    ax.set_ylim(200, 300)\n",
+    "    ax.set_ylim(100, 500)\n",
+    "    ax.set_title(f'best shift: {current_best}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sweep_study = pd.DataFrame(columns=['psd', 'freqs', 'std', 'name'])\n",
+    "\n",
+    "# 1. sort bins\n",
+    "index_matrix = get_index_matrix(row_sweep.spec)\n",
+    "n_freq = 1\n",
     "row_sweep = df_specs.loc[df_specs.title==\"sweep\"].iloc[0]\n",
-    "spec = np.mean(row_sweep.spec, axis=-2)\n",
-    "frequencies_matrix = np.argsort(spec, axis=0)[::-1]\n",
     "\n",
     "plt.figure()\n",
     "for i in range(n_freq):\n",
-    "    plt.plot(range(frequencies_matrix.shape[1]), frequencies_matrix[i])"
+    "    plt.plot(range(index_matrix.shape[1]), index_matrix[i])"
    ]
   },
   {
@@ -355,11 +404,13 @@
     "# 2. extract psd_df\n",
     "import seaborn as sns\n",
     "from frequency_analysis import extract_psd, psd_df_from_spec\n",
+    "\n",
     "spec = row_sweep.spec\n",
-    "psd_df = psd_df_from_spec(spec, row_sweep.freqs, frequencies_matrix, min_t=270, max_t=550, n_freq=n_freq)\n",
+    "\n",
+    "psd_df = psd_df_from_spec(spec, row_sweep.freqs, index_matrix, \n",
+    "                          min_t=270, max_t=550, n_freq=n_freq)\n",
     "#psd_df = extract_psd_df(signals_f, mask_psd, min_t=250, max_t=520)\n",
     "#print(psd_df.dtypes)\n",
-    "psd_df.head()\n",
     "sns.scatterplot(data=psd_df, x='frequency', y='magnitude', hue='counter')\n",
     "plt.yscale('log')\n",
     "plt.xlim(2000, 5000)\n",
@@ -372,11 +423,18 @@
     "    label=None\n",
     "    \n",
     "psd, freqs, psd_std = extract_psd(psd_df, method='median-reject')\n",
+    "sweep_study.loc[len(sweep_study), :] = dict(\n",
+    "    psd=psd,\n",
+    "    freqs=freqs,\n",
+    "    std=std,\n",
+    "    name='jack, sweep, nomotors'\n",
+    ")\n",
     "for i_mic in range(psd.shape[0]):\n",
     "    plt.plot(freqs, psd[i_mic, :], label='median-reject', color='C1')\n",
     "plt.yscale('log')\n",
     "plt.legend()\n",
-    "plt.xlim(2000, 5000)"
+    "plt.xlim(2000, 5000)\n",
+    "pass"
    ]
   },
   {
@@ -395,52 +453,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_bins = frequencies_matrix[0]\n",
-    "max_freqs = row_sweep.freqs[max_bins]\n",
-    "start_freq = max_freqs[np.argmin(np.abs(max_freqs - 3000))]\n",
-    "start_idx = np.where(max_freqs == start_freq)[0][0]\n",
-    "end_idx = np.where(max_freqs > 2000)[0][-1]\n",
-    "end_idx -= start_idx\n",
-    "mask_no_motors = frequencies_matrix[:, start_idx:end_idx]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "row_sweep_motors = df_specs.loc[df_specs.title == 'sweep 45000'].iloc[0]\n",
-    "\n",
-    "max_bins = mask_no_motors[0]\n",
-    "spec = np.mean(row_sweep_motors.spec, axis=-2)\n",
-    "sums = []\n",
-    "for shift in range(spec.shape[1]-mask_no_motors.shape[1]):\n",
-    "    mask = np.zeros_like(spec)\n",
-    "    mask[max_bins, np.arange(len(max_bins))+shift] = 1\n",
-    "    sums.append(np.sum(mask * spec))\n",
-    "best_shift = np.argmax(sums)\n",
-    "print('best shift:', best_shift)\n",
-    "mask = np.zeros_like(spec)\n",
-    "mask[max_bins, np.arange(len(max_bins))+best_shift] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#fig_all, ax_all = plt.subplots()\n",
+    "row_sweep_motors = df_specs.loc[df_specs.title == 'sweep 45000'].iloc[0]\n",
     "freqs = row_sweep_motors.freqs\n",
-    "ax = plot_spectrogram(spec, freqs, max_freq=5000)\n",
+    "spec_motors = row_sweep_motors.spec\n",
+    "ax = plot_spectrogram(spec_motors, freqs, max_freq=5000)\n",
     "ax.set_title(\"spectrogram with motors\")\n",
     "\n",
-    "x, y = np.where(mask.T > 0)\n",
-    "index_matrix = np.zeros((1, spec.shape[1]), dtype=np.int)\n",
-    "index_matrix[0, best_shift:best_shift+len(y)] = y\n",
-    "\n",
-    "ax.plot(x, freqs[y], color='white', ls=':')\n",
+    "shift_index_matrix = get_shifted_index_matrix(index_matrix, row_sweep_motors.spec)\n",
+    "ax.plot(x, freqs[shift_index_matrix[0]], color='white', ls=':')\n",
     "ax.set_ylim(1000, 5000)"
    ]
   },
@@ -453,9 +474,18 @@
    "outputs": [],
    "source": [
     "fig_all, ax_all = plt.subplots()\n",
-    "psd_df = psd_df_from_spec(row_sweep_motors.spec, row_sweep_motors.freqs, index_matrix, \n",
+    "psd_df = psd_df_from_spec(row_sweep_motors.spec, \n",
+    "                          row_sweep_motors.freqs, \n",
+    "                          shift_index_matrix, \n",
     "                          min_t=300, max_t=520, n_freq=1)\n",
-    "means, freqs, stds = extract_psd(psd_df)\n",
+    "psd, freqs, stds = extract_psd(psd_df)\n",
+    "sweep_study.loc[len(sweep_study), :] = dict(\n",
+    "    psd=psd,\n",
+    "    freqs=freqs,\n",
+    "    std=std,\n",
+    "    name='jack, sweep, motors'\n",
+    ")\n",
+    "\n",
     "for i_mic in range(means.shape[0]):\n",
     "    ax_all.errorbar(freqs, means[i_mic], stds[i_mic], \n",
     "                    marker='o', ls='-', color=f'C{i_mic}', capsize=5.0)\n",
@@ -466,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comparison audio deck"
+    "# sweep study - audio deck"
    ]
   },
   {
@@ -476,28 +506,21 @@
    "outputs": [],
    "source": [
     "from evaluate_data import read_df\n",
-    "df_soundcard = df_specs.loc[df_specs.title==\"sweep\"].iloc[0]\n",
-    "    \n",
-    "#filename = '../experiments/2021_01_15_snr_study_4/csv_files/nomotors_nosnr_noprops_sweep.csv'    \n",
-    "df_audio, df_pos = read_df(degree=0, \n",
-    "                 motors=0, \n",
-    "                 props=False, \n",
-    "                 snr=False, \n",
-    "                 source='sweep', \n",
-    "                 distance=None, \n",
-    "                 exp_name='2021_01_15_snr_study_4')\n",
     "\n",
     "plot_min_freq = 2000.0\n",
-    "plot_max_freq = 5000.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_spectrogram(df_soundcard.spec, df_soundcard.freqs, min_freq=plot_min_freq, max_freq=plot_max_freq)"
+    "plot_max_freq = 5000.0\n",
+    "\n",
+    "params = dict(\n",
+    "    degree=0, \n",
+    "    props=False, \n",
+    "    snr=False, \n",
+    "    source='sweep', \n",
+    "    distance=None, \n",
+    "    exp_name='2021_01_15_snr_study_4'\n",
+    ")\n",
+    "\n",
+    "params['motors'] = 0\n",
+    "df_audio, df_pos = read_df(**params)"
    ]
   },
   {
@@ -507,39 +530,91 @@
    "outputs": [],
    "source": [
     "df_audio.tail()\n",
-    "\n",
     "spec_audio_all, all_freqs = get_spectrogram(df_audio)\n",
     "spec_audio = np.mean(spec_audio_all, axis=-2)\n",
-    "spec_soundcard = df_soundcard.spec\n",
     "\n",
     "times = range(110, 300) #len(df_audio))\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(10, 5)\n",
     "ax.pcolorfast(times, all_freqs, np.log10(spec_audio[:-1, times[:-1]]))\n",
-    "ax.set_ylim(plot_min_freq, plot_max_freq)\n",
+    "ax.set_ylim(plot_min_freq, plot_max_freq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spec_audio[(all_freqs < plot_min_freq) | (all_freqs > plot_max_freq)] = 0\n",
+    "index_matrix = np.argsort(spec_audio, axis=0)[::-1]\n",
     "\n",
-    "stft = np.array([*df_audio.signals_f.values])\n",
-    "frequencies_matrix = np.array([*df_audio.frequencies.values])\n",
+    "psd_df = psd_df_from_spec(spec_audio_all, all_freqs, index_matrix, min_t=times[0], max_t=times[-1], n_freq=1)\n",
+    "psd, freqs, std = extract_psd(psd_df)\n",
+    "sweep_study.loc[len(sweep_study)-1, :] = dict(\n",
+    "    psd=psd,\n",
+    "    freqs=freqs,\n",
+    "    std=std,\n",
+    "    name='audio_deck, sweep, motors'\n",
+    ")\n",
     "\n",
     "plt.figure()\n",
-    "fig.set_size_inches(10, 5)\n",
-    "colors = plt.get_cmap()\n",
-    "max_freq_list = []\n",
-    "for i, t in enumerate(times):\n",
-    "    col = frequencies_matrix[t, :].astype(float)\n",
-    "    mask = (col > plot_min_freq) & (col < plot_max_freq)\n",
-    "    \n",
-    "    if np.any(mask):\n",
-    "        freqs_col = col[mask]\n",
-    "        signals_col = np.mean(np.abs(stft[t, :, mask])**2, axis=1)\n",
-    "\n",
-    "        max_bin = np.argmax(signals_col)\n",
-    "        max_freq = freqs_col[max_bin]\n",
-    "        max_freq_list.append(max_freq)\n",
-    "        plt.scatter(max_freq, signals_col[max_bin], color=colors(i/len(times)), label=t)\n",
+    "for i_mic in range(psd.shape[0]):\n",
+    "    #plt.errorbar(freqs, psd[i_mic], std[i_mic], label=f'mic{i_mic}')\n",
+    "    plt.scatter(freqs, psd[i_mic], label=f'mic{i_mic}')\n",
     "plt.yscale('log')\n",
-    "print('buzzer played at:', np.unique(max_freq_list))"
+    "plt.legend()\n",
+    "plt.xlim(2000, 5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params['motors'] = 'all45000'\n",
+    "df_audio, df_pos = read_df(**params)\n",
+    "\n",
+    "df_audio.tail()\n",
+    "spec_audio_all, all_freqs = get_spectrogram(df_audio)\n",
+    "spec_audio = np.mean(spec_audio_all, axis=-2)\n",
+    "\n",
+    "times = range(110, 300) #len(df_audio))\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(10, 5)\n",
+    "ax.pcolorfast(times, all_freqs, np.log10(spec_audio[:-1, times[:-1]]))\n",
+    "ax.set_ylim(plot_min_freq, plot_max_freq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#spec_audio[(all_freqs < plot_min_freq) | (all_freqs > plot_max_freq)] = 0\n",
+    "#mask = np.argsort(spec_audio, axis=0)[::-1]\n",
+    "shift_index_matrix = get_shifted_index_matrix(index_matrix, spec_audio_all)\n",
+    "\n",
+    "psd_df = psd_df_from_spec(spec_audio_all, all_freqs, shift_index_matrix, min_t=times[0], max_t=times[-1], n_freq=1)\n",
+    "psd, freqs, std = extract_psd(psd_df)\n",
+    "sweep_study.loc[len(sweep_study)-1, :] = dict(\n",
+    "    psd=psd,\n",
+    "    freqs=freqs,\n",
+    "    std=std,\n",
+    "    name='audio_deck, sweep, motors'\n",
+    ")\n",
+    "\n",
+    "plt.figure()\n",
+    "for i_mic in range(psd.shape[0]):\n",
+    "    #plt.errorbar(freqs, psd[i_mic], std[i_mic], label=f'mic{i_mic}')\n",
+    "    plt.scatter(freqs, psd[i_mic], label=f'mic{i_mic}')\n",
+    "plt.yscale('log')\n",
+    "plt.legend()\n",
+    "plt.xlim(2000, 5000)"
    ]
   },
   {
