Analyze frequency slices

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -954,7 +954,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_slices, freqs = wall_detector.get_frequency_slice(distance=0)\n",
+    "f_slices, freqs = wall_detector.get_frequency_slice(distance=0, max_freq=4500, min_freq=2000)\n",
     "plt.figure()\n",
     "plt.semilogy(freqs, f_slices[0])"
    ]
@@ -976,7 +976,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "distances, freqs, df_matrix_mics = wall_detector.get_df_matrix()"
+    "distances, frequencies, df_matrix_mics = wall_detector.get_df_matrix(min_freq=1000, max_freq=4500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index in range(1, 6):\n",
+    "    plt.semilogy(df_matrix_mics[0, -index, :], label=freqs[-index])\n",
+    "plt.legend()"
    ]
   },
   {
@@ -990,19 +1001,28 @@
     "from audio_stack.beam_former import normalize_rows\n",
     "\n",
     "df_matrix_norm = np.zeros_like(df_matrix_mics)\n",
-    "\n",
     "for row in range(df_matrix_mics.shape[1]):\n",
     "    for mic in range(df_matrix_mics.shape[0]):\n",
     "        sub = df_matrix_mics[mic, row, :] \n",
-    "        # 0 to 1\n",
-    "        range_ = np.max(sub) - np.min(sub)\n",
-    "        sub_norm = (sub - np.min(sub)) / range_ \n",
+    "        \n",
+    "        # divide by mean\n",
+    "        mean = np.nanmean(sub)\n",
+    "        if mean > 0:\n",
+    "            sub_norm = sub / mean\n",
+    "        else:\n",
+    "            print('Warning: zero-mean encountered', row)\n",
+    "            sub_norm = sub\n",
     "        df_matrix_norm[mic, row, :] = sub_norm\n",
+    "        \n",
+    "        # 0 to 1\n",
+    "        #range_ = np.max(sub) - np.min(sub)\n",
+    "        #sub_norm = (sub - np.min(sub)) / range_ \n",
+    "        #df_matrix_norm[mic, row, :] = sub_norm\n",
     "\n",
     "        # sum to 1\n",
     "        #sub_norm = sub / np.sum(sub)\n",
     "        #df_matrix_norm[mic, row, :] = sub_norm\n",
-    "    \n",
+    "        \n",
     "#mat = np.transpose(df_matrix_mics, (1, 2, 0))\n",
     "#mat_norm = normalize_rows(mat, method='sum_to_one')\n",
     "#df_matrix_norm = np.transpose(mat_norm, (2, 0, 1))\n",
@@ -1028,13 +1048,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "from constants import SPEED_OF_SOUND\n",
     "\n",
-    "for slice_f in range(df_matrix_norm.shape[1]):\n",
+    "#for slice_f in range(df_matrix_norm.shape[1]):\n",
+    "for slice_f in range(4):\n",
     "    fig, axs1 = plt.subplots(1, wall_detector.n_mics, sharey=False)\n",
     "    fig.set_size_inches(15, 2)\n",
     "    fig, axs2 = plt.subplots(1, wall_detector.n_mics, sharey=True)\n",
@@ -1071,7 +1092,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "from constants import SPEED_OF_SOUND\n",
@@ -1085,10 +1108,7 @@
     "    \n",
     "    d = distances[slice_d]\n",
     "    \n",
-    "    if d > 0:\n",
-    "        expected_period = SPEED_OF_SOUND / (d * 1e-2) / 2\n",
-    "    else: \n",
-    "        expected_period = 0\n",
+    "    expected_period = SPEED_OF_SOUND / (d * 1e-2) / 2\n",
     "    \n",
     "    for mic_idx in range(wall_detector.n_mics):\n",
     "        frequency_response = df_matrix_norm[mic_idx, :, slice_d]\n",
