--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -251,22 +251,35 @@
     "\n",
     "distances = np.linspace(0, 60, 200)\n",
     "frequencies = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
-    "df_matrix = np.zeros((len(frequencies), len(distances)))\n",
     "\n",
-    "mic_idx = 1\n",
-    "\n",
-    "signal = signals['multi']\n",
-    "with progressbar.ProgressBar(max_value=len(distances)-1) as bar:\n",
-    "    for j, distance_cm in enumerate(distances):\n",
-    "        #room = generate_room(distance_cm=distance_cm, single_mic=True)\n",
-    "        #stft = get_stft(room, signal)\n",
-    "        #spec = np.sum(np.abs(stft), axis=1) / (stft.shape[1] * N_BUFFER) # times x frequencies\n",
-    "        #spec_time_avg = np.mean(spec, axis=0) \n",
-    "        #df_matrix[:, j] = spec_time_avg\n",
-    "        slice_mics = get_freq_slice_pyroom(frequencies, distance_cm, signal=signal)\n",
-    "        #df_matrix[:, j] = np.mean(slice_mics, axis=0) \n",
-    "        df_matrix[:, j] = slice_mics[mic_idx]\n",
-    "        bar.update(j)"
+    "fname = 'results/df_matrix.pkl'\n",
+    "try:\n",
+    "    series_all = pd.read_pickle(fname)\n",
+    "    print('read', fname)\n",
+    "    np.testing.assert_allclose(series.distances, distances)\n",
+    "    np.testing.assert_allclose(series.frequencies, frequencies)\n",
+    "    df_matrix = series_all.df_matrix\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "    mic_idx = 1\n",
+    "    df_matrix = np.zeros((len(frequencies), len(distances)))\n",
+    "    \n",
+    "    signal = signals['multi']\n",
+    "    with progressbar.ProgressBar(max_value=len(distances)-1) as bar:\n",
+    "        for j, distance_cm in enumerate(distances):\n",
+    "            #room = generate_room(distance_cm=distance_cm, single_mic=True)\n",
+    "            #stft = get_stft(room, signal)\n",
+    "            #spec = np.sum(np.abs(stft), axis=1) / (stft.shape[1] * N_BUFFER) # times x frequencies\n",
+    "            #spec_time_avg = np.mean(spec, axis=0) \n",
+    "            #df_matrix[:, j] = spec_time_avg\n",
+    "            slice_mics = get_freq_slice_pyroom(frequencies, distance_cm, signal=signal)\n",
+    "            #df_matrix[:, j] = np.mean(slice_mics, axis=0) \n",
+    "            df_matrix[:, j] = slice_mics[mic_idx]\n",
+    "            bar.update(j)\n",
+    "    series = pd.Series({'df_matrix':df_matrix, 'distances': distances, 'frequencies': frequencies})\n",
+    "    pd.to_pickle(series, fname)\n",
+    "    print('saved as', fname)"
    ]
   },
   {
@@ -292,14 +305,18 @@
    "outputs": [],
    "source": [
     "min_freq = 100\n",
-    "max_freq = 20000\n",
+    "max_freq = 5000\n",
+    "min_dist = 1\n",
+    "max_dist = 50\n",
+    "freq_start = int(min_freq / max(frequencies) * len(frequencies))\n",
+    "freq_end = int(max_freq / max(frequencies) * len(frequencies))\n",
+    "dist_start = int(min_dist / max(distances) * len(distances))\n",
+    "dist_end = int(max_dist / max(distances) * len(distances))\n",
+    "\n",
     "\n",
     "fig = plt.figure()\n",
     "fig.set_size_inches(10, 5)\n",
-    "freq_start = int(min_freq / FS * N_BUFFER)\n",
-    "freq_end = int(max_freq / FS * N_BUFFER)\n",
-    "distance_end = 1000\n",
-    "plt.gca().pcolorfast(distances[:distance_end], frequencies[freq_start:freq_end], np.log10(df_matrix[freq_start:freq_end, :distance_end]))\n",
+    "plt.gca().pcolorfast(distances[dist_start:dist_end], frequencies[freq_start:freq_end], np.log10(df_matrix[freq_start:freq_end, dist_start:dist_end]))\n",
     "plt.xlabel('distance [cm]')\n",
     "plt.ylabel('frequency [Hz]')\n",
     "fname = 'plots/distance-frequency-matrix.pdf'\n",
@@ -312,13 +329,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "fig = plt.figure()\n",
     "fig.set_size_inches(10, 5)\n",
-    "freq_start = int(min_freq / FS * N_BUFFER)\n",
-    "freq_end = int(max_freq / FS * N_BUFFER)\n",
-    "distance_end = 1000\n",
-    "plt.gca().pcolorfast(distances[:distance_end], frequencies[freq_start:freq_end], np.log10(df_matrix[freq_start:freq_end, :distance_end]))\n",
+    "plt.gca().pcolorfast(distances[dist_start:dist_end], frequencies[freq_start:freq_end], np.log10(df_matrix[freq_start:freq_end, dist_start:dist_end]))\n",
     "plt.xlabel('distance [cm]')\n",
     "plt.ylabel('frequency [Hz]')\n",
     "fname = 'plots/distance-frequency-matrix.pdf'\n",
@@ -432,85 +445,6 @@
     "    plt.figure()\n",
     "    plt.plot(1/freq, np.abs(fft))\n",
     "    plt.axvline(f_constr, color='C1')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Outdated: Experiment twins"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "from frequency_analysis import get_psd\n",
-    "import progressbar \n",
-    "\n",
-    "df_total = pd.DataFrame(columns=['stft', 'degree', 'yaw', 'distance', 'source', 'psd', 'spec', 'frequencies'])\n",
-    "\n",
-    "exp_name = '2020_11_23_wall2'; \n",
-    "n_times = 300\n",
-    "\n",
-    "min_freq=100\n",
-    "max_freq=4400\n",
-    "bins = select_frequencies(n_buffer=N_BUFFER, fs=FS, min_freq=min_freq, max_freq=max_freq)\n",
-    "frequencies = np.fft.rfftfreq(N_BUFFER, 1/FS)[bins]\n",
-    "print(frequencies)\n",
-    "\n",
-    "# which sources to play at which angle\n",
-    "degree_list = [0, 27, 54, 81, 360]\n",
-    "sources = {\n",
-    "    deg: 'mono4125' if deg == 360 else 'sweep' for deg in degree_list \n",
-    "}\n",
-    "distance_list = np.arange(100, step=10)\n",
-    "\n",
-    "idx_all = 0\n",
-    "with progressbar.ProgressBar(max_value=len(distance_list) * len(degree_list)) as bar:\n",
-    "    for distance_cm in distance_list:\n",
-    "        for degree in degree_list:\n",
-    "            if degree == 360:\n",
-    "                stft = np.empty((0, 4, len(frequencies)))\n",
-    "\n",
-    "                # we want to be done with a turn of 360 degrees in ca. 90 steps.\n",
-    "                degrees = np.linspace(0, 360, 90)\n",
-    "                for deg in degrees:\n",
-    "                    room = generate_room(distance_cm=distance_cm, yaw_deg=deg, source=sources[degree])\n",
-    "                    sig_f = get_stft(room, n_times=1)[:, :, bins]\n",
-    "                    stft = np.concatenate([sig_f, stft], axis=0)\n",
-    "\n",
-    "                # fill the leftover buffer with measurements at 360\n",
-    "                sig_f = get_stft(room, n_times=N_TIMES)[:, :, bins]\n",
-    "                n_buffer_wait = int(FS * (DURATION_SEC - (stft.shape[0] * N_BUFFER * 2 / FS)) // (N_BUFFER * 2))\n",
-    "                stft = np.concatenate([sig_f[:n_buffer_wait, ...], stft])\n",
-    "\n",
-    "                yaw = np.full(stft.shape[0], -360)\n",
-    "                yaw[:len(degrees)] = -degrees\n",
-    "            else:\n",
-    "                room = generate_room(distance_cm=distance_cm, yaw_deg=degree, source=sources[degree])\n",
-    "                stft = get_stft(room)[:, :, bins]\n",
-    "                yaw = np.full(stft.shape[0], -degree)\n",
-    "\n",
-    "            spec = np.sum(np.abs(stft), axis=1)\n",
-    "            psd = get_psd(stft, frequencies, fname='simulated')\n",
-    "\n",
-    "            df_total.loc[len(df_total), :] = dict(\n",
-    "                degree=degree,\n",
-    "                yaw=yaw,\n",
-    "                distance=distance_cm,\n",
-    "                source=sources[degree],\n",
-    "                stft=stft,\n",
-    "                frequencies=frequencies,\n",
-    "                spec=spec,\n",
-    "                psd=psd\n",
-    "            ) \n",
-    "            idx_all += 1\n",
-    "            bar.update(idx_all)\n",
-    "        \n",
-    "#fname = f'results/{exp_name}_simulated.pkl'\n",
-    "#pd.to_pickle(df_total, fname)\n",
-    "#print('saved as', fname)"
    ]
   },
   {
