--- a/notebooks/Theory.ipynb
+++ b/notebooks/Theory.ipynb
@@ -33,9 +33,9 @@
    "source": [
     "from crazyflie_description_py.parameters import N_BUFFER, FS, TUKEY_ALPHA\n",
     "f = 3000\n",
-    "scale = 0.1 \n",
+    "noise_scale = 0.1 \n",
     "times = np.arange(0, 1, step=1/FS)\n",
-    "signal_full = np.sin(2*np.pi*f*times) + np.random.normal(scale=scale, size=times.shape)\n",
+    "signal_full = np.sin(2*np.pi*f*times) + np.random.normal(scale=noise_scale, size=times.shape)\n",
     "signal_buffer = signal_full[:N_BUFFER]"
    ]
   },
@@ -79,18 +79,111 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Cepstrum"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import scipy.signal\n",
+    "f_gain = 300\n",
+    "f_signal = 3000\n",
+    "noise_scale = 0.1 \n",
+    "times = np.arange(0, 1, step=1/FS)\n",
+    "\n",
+    "signal = np.sin(2*np.pi*f_signal*times)\n",
+    "gain = np.sin(2*np.pi*f_gain*times)\n",
+    "signals_full = scipy.signal.convolve(signal, gain, mode='same')\n",
+    "    \n",
+    "if noise_scale > 0:\n",
+    "    signals_full += np.random.normal(scale=noise_scale, size=times.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(signals_full[:N_BUFFER])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def apply_bandpass(signal_f, bandpass=[1000, 5000], method='hann'):\n",
+    "    window = np.zeros(freqs.shape)\n",
+    "    mask = (freqs > bandpass[0]) & (freqs < bandpass[1])\n",
+    "    if method == 'hann':\n",
+    "        window[mask] = scipy.signal.windows.hann(np.sum(mask))\n",
+    "    elif method == '':\n",
+    "        window[mask] = np.ones(np.sum(mask)) \n",
+    "    return signal_f * window\n",
+    "\n",
+    "cutoff = 200\n",
+    "method = ''\n",
+    "#fft = np.fft.rfft(signals_full)\n",
+    "#freqs = np.fft.rfftfreq(len(signals_full), 1/FS)\n",
+    "\n",
+    "fft = signals_full\n",
+    "freqs = times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.plot(freqs, fft)\n",
+    "plt.title('fft')\n",
+    "\n",
+    "#fft_masked = apply_bandpass(np.abs(fft), method=method)\n",
+    "fft_masked = fft\n",
+    "\n",
+    "inverse = np.abs(np.fft.irfft(fft_masked, n=len(signals_full)))\n",
+    "plt.figure()\n",
+    "plt.plot(inverse)\n",
+    "plt.title('inverse')\n",
+    "\n",
+    "# TODO(FD) why is there a factor of 2 necessary? \n",
+    "#fft_inverse = np.fft.rfft(valid_inverse)\n",
+    "#freq_inverse = np.fft.rfftfreq(len(valid_inverse), 2/FS)\n",
+    "#plt.figure()\n",
+    "#plt.plot(freq_inverse, np.abs(fft_inverse))\n",
+    "#plt.title('inverse of inverse fft')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_fft = np.log10(np.abs(fft)**2)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(freqs, log_fft)\n",
+    "plt.title('log-fft')\n",
+    "\n",
+    "#log_fft_masked = apply_bandpass(log_fft, method=method)\n",
+    "log_fft_masked = log_fft\n",
+    "cepstrum = np.abs(np.fft.irfft(log_fft_masked, n=len(signals_full)))\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(cepstrum)\n",
+    "plt.title('sepctrum')\n"
+   ]
   },
   {
    "cell_type": "code",
