Add measurement mic frequency slices

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -928,24 +928,35 @@
     "\n",
     "df_total.tail()\n",
     "\n",
+    "verbose = False\n",
+    "#mic_type = 'measurement'; n_mics=1; n_spurious=10\n",
+    "mic_type = 'audio_deck'; n_mics=4; n_spurious=1\n",
+    "\n",
     "kwargs = {\n",
-    "    'slope': (4000 - 1000) / 200,\n",
-    "    'offset': 200,\n",
-    "    'delta': 50\n",
+    "    'slope': (5000 - 1000) / 32,\n",
+    "    'offset': 500,\n",
+    "    'delta': 6\n",
     "}\n",
+    "df_here = df_total[df_total.mic_type==mic_type]\n",
     "\n",
-    "wall_detector = WallDetector(kwargs)\n",
+    "wall_detector = WallDetector(kwargs, n_mics=n_mics)\n",
     "\n",
-    "psd_df = pd.DataFrame\n",
-    "\n",
-    "with progressbar.ProgressBar(max_value = len(df_total)) as p:\n",
-    "    for i, row in df_total.iterrows():\n",
-    "        spec, freqs = wall_detector.fill_from_raw(row.frequencies_matrix, row.stft, distance=row.distance)\n",
-    "        if i == 0:\n",
-    "            fig, ax = plt.subplots()\n",
-    "            spec_avg = np.mean(spec, axis=1) \n",
-    "            ax.pcolorfast(np.arange(spec.shape[2]), freqs, np.log10(spec_avg))\n",
-    "        p.update(i)"
+    "try: \n",
+    "    wall_detector.fill_from_backup(exp_name, mic_type)\n",
+    "except:\n",
+    "    fig, ax = plt.subplots()\n",
+    "    with progressbar.ProgressBar(max_value = len(df_total)) as p:\n",
+    "        for i, row in df_here.iterrows():\n",
+    "            spec, freqs = wall_detector.fill_from_raw(row.frequencies_matrix, \n",
+    "                                                      row.stft, \n",
+    "                                                      distance=row.distance, \n",
+    "                                                      times=row.seconds, verbose=verbose)\n",
+    "            if ax is not None:\n",
+    "                spec_avg = np.mean(spec, axis=1) \n",
+    "                ax.pcolorfast(np.arange(spec.shape[2]), freqs, np.log10(spec_avg))\n",
+    "                ax = None\n",
+    "            p.update(i)\n",
+    "    wall_detector.backup(exp_name, mic_type)"
    ]
   },
   {
@@ -954,9 +965,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_slices, freqs = wall_detector.get_frequency_slice(distance=0, max_freq=4500, min_freq=2000)\n",
+    "from frequency_analysis import get_spectrogram_raw, apply_linear_mask\n",
+    "mic_idx = 0\n",
+    "row = df_here.iloc[0]\n",
+    "\n",
+    "spec_all, freqs= get_spectrogram_raw(row.frequencies_matrix, row.stft)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(10, 10)\n",
+    "ax.pcolorfast(row.seconds, freqs, np.log10(spec_all[:-1, mic_idx, :-1]))\n",
+    "\n",
+    "spec_masked, freq_masked = apply_linear_mask(spec_all, freqs, **kwargs, ax=ax, times=row.seconds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wall_detector.remove_spurious_freqs(n_spurious)\n",
+    "assert wall_detector.remove_spurious_freqs(n_spurious) == 0\n",
+    "\n",
+    "mic_idx = 0\n",
+    "f_slices, freqs = wall_detector.get_frequency_slice(distance=1, max_freq=4500, min_freq=2000)\n",
     "plt.figure()\n",
-    "plt.semilogy(freqs, f_slices[0])"
+    "plt.semilogy(freqs, f_slices[mic_idx])"
    ]
   },
   {
@@ -967,7 +1001,7 @@
    "source": [
     "d_slices, distances = wall_detector.get_distance_slice(frequency=1125)\n",
     "plt.figure()\n",
-    "plt.plot(distances, d_slices[3])"
+    "plt.plot(distances, d_slices[mic_idx])"
    ]
   },
   {
@@ -985,8 +1019,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for index in range(1, 6):\n",
-    "    plt.semilogy(df_matrix_mics[0, -index, :], label=freqs[-index])\n",
+    "method = lambda x: np.nanstd(x) / np.mean(x)\n",
+    "distances, frequencies, std_matrix_mics = wall_detector.get_df_matrix(min_freq=1000, max_freq=4500, method=method)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index in range(len(frequencies)):\n",
+    "    plt.semilogy(df_matrix_mics[0, index, :], label=frequencies[index])\n",
     "plt.legend()"
    ]
   },
@@ -1006,12 +1050,8 @@
     "        sub = df_matrix_mics[mic, row, :] \n",
     "        \n",
     "        # divide by mean\n",
-    "        mean = np.nanmean(sub)\n",
-    "        if mean > 0:\n",
-    "            sub_norm = sub / mean\n",
-    "        else:\n",
-    "            print('Warning: zero-mean encountered', row)\n",
-    "            sub_norm = sub\n",
+    "        median = np.nanmedian(sub)\n",
+    "        sub_norm = sub / median\n",
     "        df_matrix_norm[mic, row, :] = sub_norm\n",
     "        \n",
     "        # 0 to 1\n",
@@ -1027,14 +1067,47 @@
     "#mat_norm = normalize_rows(mat, method='sum_to_one')\n",
     "#df_matrix_norm = np.transpose(mat_norm, (2, 0, 1))\n",
     "\n",
-    "for i in range(df_matrix_mics.shape[0]):\n",
+    "from sklearn.impute import KNNImputer\n",
+    "imputer = KNNImputer(n_neighbors=5, weights=\"distance\", missing_values=0)\n",
+    "\n",
+    "for i in [0]: #range(df_matrix_mics.shape[0]):\n",
+    "    \n",
     "    fig, ax = plt.subplots()\n",
-    "    ax.pcolorfast(distances, freqs, np.log10(df_matrix_mics[i, :-1, :-1]))\n",
+    "    ax.pcolorfast(distances, frequencies, np.log10(df_matrix_mics[i, :-1, :-1]))\n",
     "    ax.set_title(f'mic{i}')\n",
     "    \n",
     "    fig, ax = plt.subplots()\n",
-    "    ax.pcolorfast(distances, freqs, np.log10(df_matrix_norm[i, :-1, :-1]))\n",
-    "    ax.set_title(f'mic{i} normalized')"
+    "    ax.pcolorfast(distances, frequencies, np.log10(std_matrix_mics[i, :-1, :-1]))\n",
+    "    ax.set_title(f'std{i} normalized')\n",
+    "    \n",
+    "    \n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.pcolorfast(distances, frequencies, np.log10(df_matrix_norm[i, :-1, :-1]))\n",
+    "    ax.set_title(f'mic{i} normalized')\n",
+    "    \n",
+    "    std_median = np.median(std_matrix_mics[i], axis=1) \n",
+    "    \n",
+    "    plt.figure()\n",
+    "    plt.plot(frequencies, std_median)\n",
+    "    thresh = np.median(std_median)\n",
+    "    plt.axhline(thresh)\n",
+    "    \n",
+    "    df_matrix_norm_masked = np.copy(df_matrix_norm)\n",
+    "    df_matrix_norm_masked[i, std_median > thresh] = 0\n",
+    "    \n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.pcolorfast(distances, frequencies, np.log10(df_matrix_norm_masked[i, :-1, :-1]))\n",
+    "    ax.set_title(f'mic{i} normalized')\n",
+    "    \n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.pcolorfast(distances, frequencies, np.log10(df_matrix_mics[i, :-1, :-1]))\n",
+    "    ax.set_title(f'mic{i}')\n",
+    "\n",
+    "    df_filled = imputer.fit_transform(df_matrix_mics[i, :-1, :-1])\n",
+    "\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.pcolorfast(distances, frequencies, np.log10(df_filled))\n",
+    "    ax.set_title(f'mic{i}')"
    ]
   },
   {
@@ -1048,19 +1121,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "from constants import SPEED_OF_SOUND\n",
     "\n",
-    "#for slice_f in range(df_matrix_norm.shape[1]):\n",
-    "for slice_f in range(4):\n",
-    "    fig, axs1 = plt.subplots(1, wall_detector.n_mics, sharey=False)\n",
+    "for slice_f in range(df_matrix_norm.shape[1]):\n",
+    "    fig, axs1 = plt.subplots(1, wall_detector.n_mics, sharey=False, squeeze=False)\n",
     "    fig.set_size_inches(15, 2)\n",
-    "    fig, axs2 = plt.subplots(1, wall_detector.n_mics, sharey=True)\n",
+    "    fig, axs2 = plt.subplots(1, wall_detector.n_mics, sharey=True, squeeze=False)\n",
     "    fig.set_size_inches(15, 2)\n",
-    "    axs = np.r_[[axs1, axs2]]\n",
+    "    axs = np.r_[axs1, axs2]\n",
     "    \n",
     "    f = frequencies[slice_f]\n",
     "    expected_period = SPEED_OF_SOUND / f * 1e2 / 2\n",
@@ -1100,11 +1172,11 @@
     "from constants import SPEED_OF_SOUND\n",
     "\n",
     "for slice_d in range(1, df_matrix_norm.shape[2]):\n",
-    "    fig, axs1 = plt.subplots(1, wall_detector.n_mics, sharey=False)\n",
+    "    fig, axs1 = plt.subplots(1, wall_detector.n_mics, sharey=False, squeeze=False)\n",
     "    fig.set_size_inches(15, 2)\n",
-    "    fig, axs2 = plt.subplots(1, wall_detector.n_mics, sharey=True)\n",
+    "    fig, axs2 = plt.subplots(1, wall_detector.n_mics, sharey=True, squeeze=False)\n",
     "    fig.set_size_inches(15, 2)\n",
-    "    axs = np.r_[[axs1, axs2]]\n",
+    "    axs = np.r_[axs1, axs2]\n",
     "    \n",
     "    d = distances[slice_d]\n",
     "    \n",
